[package]
name = "rudu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive", "cargo"]}
crossterm = { version = "0.27" }
anyhow = "1.0.71"
ratatui = { version = "0.22.0", features = ["all-widgets","crossterm"]}
regex = "1.9.3"
thiserror = "1.0"



